<resources>
    <string name="app_name">Registrarse</string>
    <string name="fecha"></string>
    <string name="nombre">Nombre Completo</string>
    <string name="botonFecha">Fecha de Nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Correo Electrónico</string>
    <string name="descripicion">Descripción</string>
    <string name="botonAgregar">Agregar Usuario</string>
    <string name="botonVolver">Editar Datos</string>
    <string name="botonOK">Confirmar</string>
</resources>